...

  @override
  Widget build(BuildContext context) {
    return AlertDialog(
      title: Text(
        context.loc.flashcardActivateMoreCardsTitle,
        key: const Key('activation_dialog_title'),
      ),
      content: Text(context.loc.flashcardActivateMoreCardsDescription),
      actions: [
        TextButton(
          key: const Key('activation_dialog_yes_button'),
          onPressed: _isActivating ? null : _activate,
          child: Text(context.loc.commonYes),
        ),
        TextButton(
          onPressed: _isActivating
              ? null
...
