...
  }

  Widget _buildDeckListView(List<ViewDeck> decks) {
    return Consumer<FavoriteService>(
      builder: (context, favoriteService, child) {
        return ListView.separated(
          key: const Key('home_deck_list'),
          padding: AppSpacing.screenPaddingAll,
          itemCount: decks.length,
          separatorBuilder: (context, index) => AppSpacing.heightS16,
          itemBuilder: (context, index) {
            final deck = decks[index];
            final isFavorite = favoriteService.isFavoriteDeck(deck.id!);
...
